Testing domain forwarding

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main class="container">
 
       <section>
-        <h1 class="text-center">Leadership Advantage</h1>
+        <h1 class="text-center">Leadership Advantage 2019</h1>
         <p class="lead">
           A student run, intensive four-day leadership seminar designed for incoming
           MSU students interested in an engineering career. Those behind the program
