Updated Team page and footer

--- a/team/index.html
+++ b/team/index.html
@@ -55,39 +55,39 @@
       <div class="grid" id="eboard">
 
         <div class="card">
-          <img class="card-img-top" src="img/hsu.jpg" alt="Ely Hsu's Photo">
+          <img class="card-img-top" src="img/delapaz.jpg" alt="Carlie delaPaz's Photo">
           <div class="card-body text-center">
-            <h4 class="card-title">Ely Hsu</h4>
+            <h4 class="card-title">Carlie delaPaz</h4>
             <p class="card-text">External President</p>
           </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/akey.png" alt="Kayla's Photo">
+          <img class="card-img-top" src="img/powers.jpg" alt="Sean Powers's Photo">
           <div class="card-body text-center">
-            <h4 class="card-title">Kayla Akey</h4>
+            <h4 class="card-title">Sean Powers</h4>
             <p class="card-text">Internal President</p>
           </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/delapaz.jpg" alt="Carlie's Photo">
+          <img class="card-img-top" src="img/lemieux.jpg" alt="Sean Lemieux's Photo">
           <div class="card-body text-center">
-            <h4 class="card-title">Carlie delaPaz</h4>
+            <h4 class="card-title">Sean Lemieux</h4>
             <p class="card-text">Secretary</p>
           </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/ackley.jpg" alt="David Ackley's Photo">
+          <img class="card-img-top" src="img/yalamanchili.jpg" alt="Rahul Yalamanchiliy's Photo">
           <div class="card-body text-center">
-            <h4 class="card-title">David Ackley</h4>
+            <h4 class="card-title">Rahul Yalamanchili</h4>
             <p class="card-text">Webmaster</p>
           </div>
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/bella.jpg" alt="Bella's Photo">
+          <img class="card-img-top" src="img/bella.jpg" alt="Isabella Wah's Photo">
           <div class="card-body text-center">
             <h4 class="card-title">Isabella Wah</h4>
             <p class="card-text">Treasurer</p>
@@ -95,9 +95,9 @@
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/powers.jpg" alt="Sean Powers' Photo">
+          <img class="card-img-top" src="img/bangston.jpg" alt="Matt Bangtson's Photo">
           <div class="card-body text-center">
-            <h4 class="card-title">Sean Powers</h4>
+            <h4 class="card-title">Matt Bangtson</h4>
             <p class="card-text">Caterer</p>
           </div>
         </div>
@@ -122,7 +122,7 @@
       <div class="container-fluid">
         <div class="row footer-copyright">
           <div class="col-12 text-center">
-            <p class="copyright">&copy; 2017 Leadership Advantage</p>
+            <p class="copyright">&copy; 2019 Leadership Advantage</p>
           </div>
         </div>
       </div>
