--- a/comingSoon.html
+++ b/comingSoon.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119120743-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -12,18 +13,19 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Leadership Advantage | Team</title>
+    <title>Leadership Advantage </title>
+    <link rel="shortcut icon" href="favicon.ico">
     <!-- bootstrap css cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/team.css">
+    <link rel="stylesheet" href="css/home.css">
   </head>
 
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="../">
+        <a class="navbar-brand" href="/">
           Leadership Advantage
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../about">About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=".">Team</a>
+              <a class="nav-link" href="/team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../comingSoon.html" target="_blank">Apply</a>
+              <a class="nav-link" href="comingSoon.html">Apply</a>
             </li>
           </ul>
         </div>
@@ -50,58 +52,9 @@
 
     <main class="container">
 
-      <h1 class="text-center">The Executive Board</h1>
-
-      <div class="grid" id="eboard">
-
-        <div class="card">
-          <img class="card-img-top" src="img/delapaz.jpg" alt="Carlie delaPaz's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Carlie delaPaz</h4>
-            <p class="card-text">External President</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="img/powers.jpg" alt="Sean Powers's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Sean Powers</h4>
-            <p class="card-text">Internal President</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="img/lemieux.jpg" alt="Sean Lemieux's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Sean Lemieux</h4>
-            <p class="card-text">Secretary</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="img/yalamanchili.jpg" alt="Rahul Yalamanchiliy's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Rahul Yalamanchili</h4>
-            <p class="card-text">Webmaster</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="img/bella.jpg" alt="Isabella Wah's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Isabella Wah</h4>
-            <p class="card-text">Treasurer</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src="img/bangston.jpg" alt="Matt Bangtson's Photo">
-          <div class="card-body text-center">
-            <h4 class="card-title">Matt Bangtson</h4>
-            <p class="card-text">Caterer</p>
-          </div>
-        </div>
-
+      <div class="jumbotron text-center">
+        <h1 class="display-3">Application Coming Soon</h1>
+        <p class="lead">Applications for the 2019 program open May 14th 2019 and closes June 29th.</p>
       </div>
 
     </main>
