--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="/team">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://goo.gl/forms/c48qXsSKbUTKsySC2" target="_blank">Apply</a>
+              <a class="nav-link" href="comingSoon.html" target="_blank">Apply</a>
             </li>
           </ul>
         </div>
