Apply page update

--- a/about/index.html
+++ b/about/index.html
@@ -53,8 +53,8 @@
 
       <div class="jumbotron text-center">
         <h1 class="display-3">Apply</h1>
-        <p class="lead">Applications for the 2018 program opens May 14th and closes June 29th.</p>
-        <p class="lead">The program begins Wednesday, August 22nd and ends Saturday, August 25th.</p>
+        <p class="lead">Applications for the 2019 program opens May 14th and closes June 29th.</p>
+        <p class="lead">The program begins Wednesday, August 21st and ends Saturday, August 24th.</p>
         <a href="https://goo.gl/forms/c48qXsSKbUTKsySC2" class="btn btn-primary" target="_blank">Apply Now!</a>
       </div>
 
