Updated Sean's Photo

--- a/team/index.html
+++ b/team/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="card">
-          <img class="card-img-top" src="img/powers.jpg" alt="Sean Powers's Photo">
+          <img class="card-img-top" src="img/powers.jpeg" alt="Sean Powers's Photo">
           <div class="card-body text-center">
             <h4 class="card-title">Sean Powers</h4>
             <p class="card-text">Internal President</p>
