--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
+    <meta name="description" content="Launch Your Engineering Career at MSU's leadership seminar designed specifically for students interested in engineering.">
     <meta name="author" content="Creative Tim">
     <title>Leadership Advantage</title>
     <!-- Favicon -->
