--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
     <script src="assets/vendor/headroom/headroom.min.js"></script>
     <!-- Argon JS -->
     <script src="assets/js/argon.js?v=1.0.1"></script>
+    <!-- Custom JS to handle links to tabs-->
     <script>
         jQuery(function($) {
             //tab
