Updated meta tags, fixed modal bug

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Launch Your Engineering Career at MSU's leadership seminar designed specifically for students interested in engineering.">
-    <meta name="author" content="Creative Tim">
+    <meta name="theme-color" content="#18453b">
+
     <title>Leadership Advantage</title>
     <!-- Favicon -->
     <link href="assets/img/brand/favicon.ico" rel="icon" type="image/png">
@@ -492,8 +493,8 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-white">Ok, Got it</button>
-                                <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-white" data-dismiss="modal">Ok, Got it</button>
+                                <button type=" button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
                             </div>
 
                         </div>
