--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     MSU students interested in an engineering career. Those behind the program
                                     are currently enrolled in the College of Engineering with first-hand
                                     experience on what it takes to be a Spartan Engineer. Leadership Advantage
-                                    focuses on developing personal leadership skills, providing awareness of
+                                    focuses on developing leadership skills, providing awareness of
                                     leadership opportunities, and welcoming new students to the university
                                     community.
                                 </p>
@@ -167,7 +167,7 @@
                                             <i class="ni ni-single-02"></i>
                                         </div>
                                         <h6 class="text-primary text-uppercase">Learn Leadership Skills</h6>
-                                        <p class="description mt-3">Participate in group skill-building activities designed to help you develop the leadership skills necessary for a team to succeed. These include communication, responsibility, creativity, and delegation.</p>
+                                        <p class="description mt-3">Participate in group skill-building activities designed to help you develop the leadership skills necessary for a team to succeed; these include communication, responsibility, creativity, and delegation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +178,7 @@
                                             <i class="ni ni-hat-3"></i>
                                         </div>
                                         <h6 class="text-success text-uppercase">Prepare for College</h6>
-                                        <p class="description mt-3">Get advice from upperclassmen about academics, internships/co-ops, and extra-curricular activites. Learn from the facilitators mistakes in our student-led panel..</p>
+                                        <p class="description mt-3">Get advice from upperclassmen about academics, internships/co-ops, and extra-curricular activites. Learn from the facilitators' mistakes in our student-led panel.</p>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
                                             <i class="ni ni-key-25"></i>
                                         </div>
                                         <h6 class="text-warning text-uppercase">Move-In Early</h6>
-                                        <p class="description mt-3">Take advantage of the opportunity to move in on campus before the official move-in day. Learn where your classes are ahead of time and be prepared for your first week.</p>
+                                        <p class="description mt-3">Take advantage of the opportunity to move-in onto campus before the official move-in day. Learn where your classes are ahead of time and be prepared for your first week.</p>
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                 <i class="ni ni-trophy"></i>
                             </div>
                             <h3>Trebuchet Design Competitions</h3>
-                            <p>The points from other design competitions serve as currency to buy materials to build a trebuchet under given constraints. Points will be awarded to the teams with the sleekest looking trebuchet, farthest throwing trebuchet, and the winner of a war style competition.</p>
+                            <p>The points from other design competitions serve as currency to buy materials to build a trebuchet under given constraints. Ranking points will be awarded to the teams with the sleekest looking trebuchet, farthest throwing trebuchet, and the winner of a war style competition.</p>
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                                 <i class="ni ni-user-run"></i>
                             </div>
                             <h3>Optional Evening Activities</h3>
-                            <p>The points from other design competitions serve as currency to buy materials to build a trebuchet under given constraints. Points will be awarded to the teams with the sleekest looking trebuchet, farthest throwing trebuchet, and the winner of a war style competition.</p>
+                            <p>Join us for Optional Evening Activities such as Ultimate Frisbee or Volleyball. This is a great opportunity to connect with your facilitators and your future colleagues.</p>
                         </div>
                     </div>
                 </div>
