Added descriptions to eboard

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link" data-toggle="dropdown" href="#" role="button" id="nav-team">
                                 <i class="fa fa-users d-lg-none"></i>
-                                <span class="nav-link-inner--text">Team</span>
+                                <span class="nav-link-inner--text">E-Board</span>
                             </a>
                         </li>
                     </ul>
@@ -388,81 +388,132 @@
                         <h2 class="display-3">The Executive Board</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/delapaz.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Carlie delaPaz</span>
-                                    <small class="h6 text-muted">External President</small>
-                                </h5>
+                <div class="col-lg-12">
+                    <div class="row row-grid">
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/delapaz.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Carlie delaPaz</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Powers's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Sean Powers</span>
-                                    <small class="h6 text-muted">Internal President</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Sean Powers</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Sean Lemieux</span>
-                                    <small class="h6 text-muted">Secretary</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Sean Lemieux</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Rahul Yalamanchili's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Rahul Yalamanchili</span>
-                                    <small class="h6 text-muted">Webmaster</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Rahul Yalamanchili</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Bella Wah's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Bella Wah</span>
-                                    <small class="h6 text-muted">Treasurer</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Bella Wah</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Joe Lietaert</span>
-                                    <small class="h6 text-muted">Recruitment</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Joe Lietaert</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="px-4">
-                            <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangtson's Photo">
-                            <div class="pt-4 text-center">
-                                <h5 class="title">
-                                    <span class="d-block mb-1">Matt Bangtson</span>
-                                    <small class="h6 text-muted">Caterer</small>
-                                </h5>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-5">
+                                        <h3 class="text-primary">Matt Bangtson</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                    </div>
+
+                                    <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
