--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="container">
                 <div class="row row-grid align-items-center">
                     <div class="col-md-6 order-md-2">
-                        <img src="assets/img/theme/promo-1.png" class="img-fluid floating">
+                        <img src="assets/img/theme/promo-1.png" class="img-fluid floating shadow-lg">
                     </div>
                     <div class="col-md-6 order-md-1">
                         <div class="pr-md-5">
@@ -220,7 +220,7 @@
             <div class="container">
                 <div class="row row-grid align-items-center">
                     <div class="col-md-6">
-                        <div class="card bg-default shadow border-0">
+                        <div class="card bg-default shadow-lg border-0 floating">
                             <img src="assets/img/pictures/cyclotron.jpg" class="card-img-top">
                             <blockquote class="card-blockquote">
                                 <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
@@ -248,7 +248,7 @@
             <div class="container">
                 <div class="row row-grid align-items-center">
                     <div class="col-md-6 order-md-2">
-                        <img src="assets/img/pictures/volleyball.jpg" class="img-fluid floating">
+                        <img src="assets/img/pictures/volleyball.jpg" class="img-fluid floating shadow-lg">
                     </div>
                     <div class="col-md-6 order-md-1">
                         <div class="pr-md-5">
