Updated Team page

--- a/about.html
+++ b/about.html
@@ -85,9 +85,9 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a href="eboard.html" class="nav-link" id="nav-team">
+                            <a href="team.html" class="nav-link" id="nav-team">
                                 <i class="fa fa-users d-lg-none"></i>
-                                <span class="nav-link-inner--text">E-Board</span>
+                                <span class="nav-link-inner--text">The Team</span>
                             </a>
                         </li>
                     </ul>
