--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link" id="back-to-top">
                                 <i class="fa fa-users d-lg-none"></i>
-                                <span class="nav-link-inner--text">E-Board</span>
+                                <span class="nav-link-inner--text">The Team</span>
                             </a>
                         </li>
                     </ul>
@@ -167,10 +167,10 @@
                                     <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Sean Powers</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Elyria, OH</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
                                     </div>
 
                                     <div class="border-top">
@@ -185,10 +185,10 @@
                                     <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Sean Lemieux</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Clarkston, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Chemical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
                                     <div class="border-top">
@@ -203,10 +203,10 @@
                                     <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Rahul Yalamanchili</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Farmington Hills, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
                                     </div>
 
                                     <div class="border-top">
@@ -221,10 +221,10 @@
                                     <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Bella Wah</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Jensen Beach, FL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Advertising Management </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
                                     </div>
 
                                     <div class="border-top">
@@ -239,10 +239,10 @@
                                     <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Joe Lietaert</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Lambertville, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
                                     </div>
 
                                     <div class="border-top">
@@ -257,10 +257,10 @@
                                     <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
                                     <div class="text-center mt-5">
                                         <h3 class="text-primary">Matt Bangtson</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Edwardsburg, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Supply Chain Management</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
                                     <div class="border-top">
