--- a/team.html
+++ b/team.html
@@ -139,20 +139,20 @@
             </section>
             <!-- 1st Hero Variation -->
         </div>
-        <section class="section section-lg pt-lg-0 mt--200" id="team">
+        <section class="section section-lg pt-lg-0 mt--200" id="eboard">
             <div class="container">
                 <div class="col-lg-12">
                     <div class="row row-grid">
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/delapaz.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
-                                        <h3 class="text-primary">Carlie delaPaz</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Hometown, State</div>
+                                    <img src="assets/img/team/delapaz.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie DelaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Carlie DelaPaz</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Oxford, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>Graduation Date</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
                                     </div>
 
                                     <div class="border-top">
@@ -164,8 +164,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Powers's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Sean Powers</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Elyria, OH</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
@@ -182,8 +182,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Sean Lemieux</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Clarkston, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
@@ -200,8 +200,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Rahul Yalamanchili's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Rahul Yalamanchili</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Farmington Hills, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
@@ -218,8 +218,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Bella Wah's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Bella Wah</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Jensen Beach, FL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
@@ -236,8 +236,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/lietaert.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joe Lietaert's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Joe Lietaert</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Lambertville, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
@@ -254,8 +254,8 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
-                                    <div class="text-center mt-5">
+                                    <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangtson's Photo">
+                                    <div class="text-center mt-3">
                                         <h3 class="text-primary">Matt Bangtson</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Edwardsburg, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
