Minor JS changes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- Argon CSS -->
     <link type="text/css" href="assets/css/argon.css?v=1.0.1" rel="stylesheet">
-    <!-- Docs CSS -->
-    <!--<link type="text/css" href="assets/css/docs.min.css" rel="stylesheet"> -->
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -330,7 +328,7 @@
     <script src="assets/vendor/headroom/headroom.min.js"></script>
     <!-- Argon JS -->
     <script src="assets/js/argon.js?v=1.0.1"></script>
-    <!-- Custom JS to handle links to tabs-->
+    <!-- Custom JS to handle back to top animation-->
     <script>
         jQuery(function($) {
             $('#back-to-top').on('click', function(event) {
