--- a/team.html
+++ b/team.html
@@ -155,9 +155,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -173,9 +173,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -191,9 +191,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -209,9 +209,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -227,9 +227,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -245,9 +245,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -263,9 +263,9 @@
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
-                                    <div class="border-top">
+                                    <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -273,6 +273,92 @@
                 </div>
             </div>
         </section>
+
+        <!-- <section class="section section-lg mt--100">
+            <div class="container">
+                <div class="row row-grid align-items-center">
+                    <h1 class="display-3 mb-0">The Facilitators</h2>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="section section-lg pt-lg-0" id="facilitators">
+            <div class="container">
+                <div class="col-lg-12">
+                    <div class="row row-grid">
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/facilitators/placeholder.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie delaPaz's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Firstname Lastname</h3>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Year, Major</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+
         <section>
             <div class="col-md-4">
                 <div class="modal fade" id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
